@@ -36,6 +36,7 @@
 #ifdef Q_OS_WIN
 /* To change app priority */
 #include <windows.h>
+#include <QSysInfo> // To get Windows version
 #endif
 
 
@@ -1009,6 +1010,19 @@ void Core::startMplayer( QString file, double seek )
     if (fi.exists()) {
         mplayer_bin = fi.absoluteFilePath();
 	}
+
+#ifdef Q_OS_WIN
+	// Windows 98 and ME: call another program as intermediate
+	if ( (QSysInfo::WindowsVersion == QSysInfo::WV_98) ||
+         (QSysInfo::WindowsVersion == QSysInfo::WV_Me) ) 
+	{
+		QString intermediate_bin = Helper::mplayer_intermediate(mplayer_bin);
+		if (!intermediate_bin.isEmpty()) {
+			proc->addArgument( intermediate_bin );
+		}
+	}
+#endif
+
 	proc->addArgument( mplayer_bin );
 
 	/*
